--- a/chanqs_rn_tutorial/package.json
+++ b/chanqs_rn_tutorial/package.json
@@ -14,10 +14,12 @@
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.25",
+    "axios": "^1.11.0",
     "react": "19.1.0",
     "react-native": "0.80.2",
     "react-native-safe-area-context": "^5.6.0",
-    "react-native-screens": "^4.13.1"
+    "react-native-screens": "^4.13.1",
+    "zustand": "^5.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
